--- a/wikimedia/css/style.css
+++ b/wikimedia/css/style.css
@@ -4,9 +4,10 @@
 	box-sizing: border-box;
 
 }
+
 /* SETTEO DE MAPA */
 #map {
-        height: 500px;
+        height:600px;
         width: 80%;
         margin: auto;
 }
@@ -15,10 +16,22 @@
 	height: 60px;
 	width: 100%;
 }
+/*ESTILOS BODY*/
+.familia-fuente{
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 700;
+	font-size: 24px;
+}
+p, li {
+	font-family: 'Lato', sans-serif;
+	font-size: 1.2em;
+
+}
 /* MENU MOBILE*/
 /*.mobile{
   display: none;
 }*/
+
 /*ARREGLO HEADINGS INFOMAP*/
 .infoTitle{
 	overflow-y: scroll;
